--- a/application.yml
+++ b/application.yml
@@ -12,3 +12,6 @@ eureka:
       defaultZone: http://eureka7002.com:7002/eureka/
       #单机就是7001自己，自己守望自己
       #defaultZone: http://eureka7001.com:7001/eureka/
+      
+sdfgkfhfgks:
+  ldjgdlfgjsd
