--- a/application-dev.yml
+++ b/application-dev.yml
@@ -10,3 +10,5 @@ eureka:
       #defaultZone: http://localhost:7001/eureka
       #集群版
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com/eureka
+test:
+  test1: hello world!
